js/js.translator/testData/incremental/invalidation/typeScriptExportSurfaceUpdatesPerModule/lib1/l1.2.kt
@JsExport
fun bar(name: String): String = name
